--- a/src/viewer/viewer.css
+++ b/src/viewer/viewer.css
@@ -70,7 +70,7 @@
 .scroll {
   background-color: #000;
   height: 100%;
-  bottom: 0px;
+  right: 0px;
   position: absolute;
   width: 0.7142rem;
 }
